--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.18.0",
+    "dayjs": "^1.11.19",
     "next": "16.0.3",
     "next-sanity": "^11.6.8",
     "react": "19.2.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
